src/test/ui/coherence/coherence-with-closure.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/coherence-with-closure.rs:10:24
   |
LL | impl Trait for Wrapper<OpaqueClosure> {}
   |                        ^^^^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/coherence-with-closure.rs:3:22
   |
LL | type OpaqueClosure = impl Sized;
   |                      ^^^^^^^^^^

error[E0119]: conflicting implementations of trait `Trait` for type `Wrapper<OpaqueClosure>`
  --> $DIR/coherence-with-closure.rs:12:1
   |
LL | impl Trait for Wrapper<OpaqueClosure> {}
   | ------------------------------------- first implementation here
LL |
LL | impl<T: Sync> Trait for Wrapper<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Wrapper<OpaqueClosure>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
